<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>kvasir</groupId>
    <artifactId>kvasir-parent</artifactId>
    <version>0.17.1</version>
    <packaging>pom</packaging>
    <modules>
        <module>libs</module>
        <module>plugins</module>
        <module>services</module>
    </modules>
    <properties>
        <compiler-plugin.version>3.14.1</compiler-plugin.version>
        <kotlin.version>2.3.0</kotlin.version>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- Required because @{argLine} might be empty, and then it defaults to this empty variable -->
        <argLine></argLine>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.31.4</quarkus.platform.version>
        <idlab.extension.openfga.version>2.0.0</idlab.extension.openfga.version>
        <openfga.docker.model-tx.image>gitlab.ilabt.imec.be:4567/discover/ci-tools/fga-model-tx:latest
        </openfga.docker.model-tx.image>
        <jackson.version>2.17.1</jackson.version>
        <guava.version>33.4.0-jre</guava.version>
        <rdf4j.version>5.0.3</rdf4j.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>
        <compose.executable>docker</compose.executable>
        <compose.skip>false</compose.skip>
        <model-tx.executable>${compose.executable}</model-tx.executable>
        <model-tx.skip>false</model-tx.skip>
    </properties>
    <repositories>
        <repository>
            <id>gitlab-maven</id>
            <url>https://gitlab.ilabt.imec.be/api/v4/groups/discover/-/packages/maven</url>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-bom</artifactId>
                <version>${kotlin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-amazon-services-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-kotlin</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-config-yaml</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-smallrye-openapi</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-jacoco</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <sourceDirectory>src/main/kotlin</sourceDirectory>
        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>${quarkus.platform.group-id}</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.platform.version}</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <argLine>@{argLine} --enable-native-access=ALL-UNNAMED</argLine>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                            <quarkus.jacoco.data-file>${maven.multiModuleProjectDirectory}/target/jacoco.exec
                            </quarkus.jacoco.data-file>
                            <quarkus.jacoco.reuse-data-file>true</quarkus.jacoco.reuse-data-file>
                            <quarkus.jacoco.report-location>${maven.multiModuleProjectDirectory}/target/coverage
                            </quarkus.jacoco.report-location>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <argLine>@{argLine} --enable-native-access=ALL-UNNAMED</argLine>
                        <systemPropertyVariables>
                            <native.image.path>${project.build.directory}/${project.build.finalName}-runner
                            </native.image.path>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlin.version}</version>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <goals>
                                <goal>test-compile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-allopen</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.jetbrains.kotlin</groupId>
                            <artifactId>kotlin-maven-noarg</artifactId>
                            <version>${kotlin.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <javaParameters>true</javaParameters>
                        <compilerPlugins>
                            <plugin>all-open</plugin>
                            <plugin>no-arg</plugin>
                        </compilerPlugins>
                        <pluginOptions>
                            <option>all-open:annotation=jakarta.ws.rs.Path</option>
                            <option>all-open:annotation=jakarta.enterprise.context.ApplicationScoped</option>
                            <option>all-open:annotation=jakarta.enterprise.context.RequestScoped</option>
                            <option>all-open:annotation=io.quarkus.test.junit.QuarkusTest</option>
                            <option>no-arg:annotation=kvasir.definitions.annotations.GenerateNoArgConstructor</option>
                        </pluginOptions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>io.smallrye</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>3.5.2</version>
                    <executions>
                        <execution>
                            <id>make-index</id>
                            <goals>
                                <goal>jandex</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>create-target-directory</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="${maven.multiModuleProjectDirectory}/target"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.1</version>
                <inherited>false</inherited>
                <executions>
                    <!-- Compose up for dev and test -->
                    <execution>
                        <id>compose-up</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${compose.skip}</skip>
                            <executable>${compose.executable}</executable>
                            <arguments>
                                <argument>compose</argument>
                                <argument>-f</argument>
                                <argument>${maven.multiModuleProjectDirectory}/compose/compose.devservices.yml
                                </argument>
                                <argument>up</argument>
                                <argument>-d</argument>
                                <argument>--quiet-pull</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <!-- Compose down -v on clean -->
                    <execution>
                        <id>compose-down</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${compose.skip}</skip>
                            <executable>${compose.executable}</executable>
                            <arguments>
                                <argument>compose</argument>
                                <argument>-f</argument>
                                <argument>${maven.multiModuleProjectDirectory}/compose/compose.devservices.yml
                                </argument>
                                <argument>down</argument>
                                <argument>-v</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <!-- FGA MODEL DSL TO JSON -->
                    <execution>
                        <id>fga-model-tx</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${model-tx.skip}</skip>
                            <executable>${model-tx.executable}</executable>
                            <arguments>
                                <argument>run</argument>
                                <argument>-v</argument>
                                <argument>${basedir}/plugins/openfga-pep/src/main/resources:/dsl:z</argument>
                                <argument>-t</argument>
                                <argument>${openfga.docker.model-tx.image}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
            </properties>
        </profile>
    </profiles>
</project>
